--- a/styles.css
+++ b/styles.css
@@ -698,6 +698,11 @@ body {
         text-align: center;
     }
 
+    .instructor-image img {
+        width: 200px;
+        height: 200px;
+    }
+
     .courses-grid {
         grid-template-columns: 1fr;
     }
